qt .pro file created to build on Linux

--- a/src/View/ArpSeq.ui
+++ b/src/View/ArpSeq.ui
@@ -3698,17 +3698,17 @@
   <customwidget>
    <class>DialKnob</class>
    <extends>QDial</extends>
-   <header>UiWidgets.h</header>
+   <header>View/UiWidgets.h</header>
   </customwidget>
   <customwidget>
    <class>ComboPicker</class>
    <extends>QComboBox</extends>
-   <header>UiWidgets.h</header>
+   <header>View/UiWidgets.h</header>
   </customwidget>
   <customwidget>
    <class>SpinBox</class>
    <extends>QSpinBox</extends>
-   <header>UiWidgets.h</header>
+   <header>View/UiWidgets.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
